full blurry project

--- a/index.html
+++ b/index.html
@@ -3,38 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Progress steps</title>
+    <title>Blurry loading</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link rel="stylesheet" href="./assats/style.css">
 </head>
 <body>
-    <div class="container ">
-        <div class="circle_container">
-            <div class="circle">
-                <button id="close">
-                    <i class="fa-solid fa-xmark"></i>
-                </button>
-                <button id="open">
-                    <i class="fa-solid fa-bars"></i>
-                </button>
-            </div>
-        </div>
-        <div class="content">
-            <h1>Amazing Article</h1>
-            <small>Imran ali</small>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio est nostrum tempora. Ea minima, repellat velit amet magnam mollitia blanditiis laudantium assumenda rerum quis quidem?</p>
-            <h3>My Dog</h3>
-            <img src="./assats/images/Cute_dog.jpg" alt="">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti magnam facilis laborum consectetur molestias aliquam, quaerat eveniet itaque veniam et iste rem natus eum error ut debitis maxime, aut omnis?</p>
-        </div>
-    </div>
-    <nav>
-        <ul>
-            <li><i class="fa-solid fa-house"></i> Home </li>
-            <li><i class="fa-solid fa-eject"></i> About</li>
-            <li><i class="fa-solid fa-address-book"></i> Contact</li>
-        </ul>
-    </nav>
+  <section class="bg">
+   
+  </section>
+  <div class="loading_text">
+    0%
+</div>
     <script src="./app.js">
 
     </script>
